fix tooltip wrap issue

--- a/blur-admin/app/stylesheets/partials/_base.scss
+++ b/blur-admin/app/stylesheets/partials/_base.scss
@@ -58,3 +58,4 @@ body {
 h2 { font-size: 200%; }
 
 .ui-dialog { min-width: 300px; }
+.ui-tooltip { max-width: 600px; }
